tests/ui/ffi_const.stderr
error[E0756]: `#[ffi_const]` may only be used on foreign functions
  --> $DIR/ffi_const.rs:4:1
   |
LL | #[ffi_const]
   | ^^^^^^^^^^^^

error[E0756]: `#[ffi_const]` may only be used on foreign functions
  --> $DIR/ffi_const.rs:7:1
   |
LL | #[ffi_const]
   | ^^^^^^^^^^^^

error[E0756]: `#[ffi_const]` may only be used on foreign functions
  --> $DIR/ffi_const.rs:13:5
   |
LL |     #[ffi_const]
   |     ^^^^^^^^^^^^

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0756`.
